--- a/package.json
+++ b/package.json
@@ -14,10 +14,18 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.1.0",
         "axios": "^0.21",
+        "browser-sync": "^2.27.10",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.2.1",
         "postcss-import": "^14.0.1",
+        "resolve-url-loader": "^5.0.0",
         "tailwindcss": "^3.0.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.2.0",
+        "sass": "^1.54.0",
+        "sass-loader": "^13.0.2"
     }
 }
